<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sol.earningapp.smtech.activities.MainActivity">

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adViewD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="@dimen/ten"
        android:layout_marginRight="@dimen/ten"
        ads:adSize="BANNER"
        ads:adUnitId="@string/dashboard_activity_top_banner_one"></com.google.android.gms.ads.AdView>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView2D"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/adViewD"
        android:layout_marginLeft="@dimen/ten"
        android:layout_marginRight="@dimen/ten"
        ads:adSize="BANNER"
        ads:adUnitId="@string/dashboard_activity_top_banner_two"></com.google.android.gms.ads.AdView>

    <TextView
        android:id="@+id/tvTotalEarn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:padding="5dp"
        android:text="My Total Earn Points: 0"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/tvLastWithdraw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTotalEarn"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:padding="5dp"
        android:text="My Last Withdraw: 0"
        android:textSize="23sp" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/tvLastWithdraw"
        android:layout_centerHorizontal="true"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_logo" />

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView3D"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/ivLogo"
        android:layout_marginLeft="@dimen/ten"
        android:layout_marginRight="@dimen/ten"
        android:layout_marginTop="20dp"
        ads:adSize="BANNER"
        ads:adUnitId="@string/dashboard_activity_bottom_banner_one"></com.google.android.gms.ads.AdView>


</RelativeLayout>
